# tmam-python-sdk

./: .env.example  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/tmam/: __helpers.py  __init__.py
src/tmam/core/: datetime_utils.py  pydantic_utilities.py
src/tmam/evals/: __init__.py  all.py  bias_detection.py  hallucination.py  toxicity.py  utils.py
src/tmam/guard/: __init__.py  all.py  detect.py  prompt_injection.py  restrict_topic.py  sensitive_topic.py  utils.py
src/tmam/instrumentation/ag2/: __init__.py  ag2.py
src/tmam/instrumentation/ai21/: __init__.py  ai21.py  async_ai21.py  utils.py
src/tmam/instrumentation/anthropic/: __init__.py  anthropic.py  async_anthropic.py  utils.py
src/tmam/instrumentation/assemblyai/: __init__.py  assemblyai.py
src/tmam/instrumentation/astra/: __init__.py  astra.py  async_astra.py  utils.py
src/tmam/instrumentation/azure_ai_inference/: __init__.py  async_azure_ai_inference.py  azure_ai_inference.py  utils.py
src/tmam/instrumentation/bedrock/: __init__.py  bedrock.py  utils.py
src/tmam/instrumentation/chroma/: __init__.py  chroma.py
src/tmam/instrumentation/cohere/: __init__.py  async_cohere.py  cohere.py
src/tmam/instrumentation/controlflow/: __init__.py  controlflow.py
src/tmam/instrumentation/crewai/: __init__.py  (+1 more)
src/tmam/model/: dataset.py
src/tmam/otel/: events.py  metrics.py  tracing.py
src/tmam/utils/: experiment.py
tests/: conftest.py  test_core_utils.py  test_dataset.py  test_evals.py  test_helpers.py  test_init.py  test_instrumention.py  test_otel.py  test_semcov.py
(+77 files in other folders)
